* Terms of Use can now be specified in the ACP for new users.
* Updated Google Analytics support so that the codebase doesn't need to be updated every time they change the tracking code snippet.
* Added support for server and user timezone settings.
* XTemplate library has been swapped for a better performing version called zTemplate.

Bugs:

* Active user agent list didn't have sufficient space for an IPv6 address to display clearly.
* Bare URLs entered into posts were getting stray single quotes placed around them.
* Crash if all permissions are unset on a user edit.
* BBCode menu was not functional on the random quotes editor.
* Fixed an issue with the emoticon editor in the ACP.
* Submitting a false positive on a comment was calling an invalid function name.
* User count stats were referencing the wrong variable and giving inaccurate counts.
* Comments were not correctly storing IP addresses.
* Editing comments does not handle request_uri properly.
* Profile page should no longer improperly autocomplete stylesheet and password fields.
* Blogroll editing was not handling https:// links properly.
* Email validation was outdated and rejecting more than it should have. Replaced with standardized PHP library call.

Changes for Sandbox 2.3
-----------------------

Changes:

* Added site_tagline setting to go with a site's name in the header.
* Made the iTouch icons used on Empire of the Iguanadons into a standard feature.
* Analytics tracker code updated.

Bugs:

* Social media button links for gallery images needed to be updated.
* Clean up the upgrade installer to handle upgrades for sites running Sandbox 1.8.
* Numerous bug fixes for new installs, upgrades, and minor security issues with hidden image and download folders.

Changes for Sandbox 2.2
-----------------------

Changes:

* Added Google +1 button support to blog posts.
* Added Twitter button support to blog posts.
* Added Reddit button support for blog posts.
* Changed the Facebook button setup.