@@ -13,6 +13,7 @@ Changes:
 * Updated Google Analytics support so that the codebase doesn't need to be updated every time they change the tracking code snippet.
 * Added support for server and user timezone settings.
 * XTemplate library has been swapped for a better performing version called zTemplate.
+* Updated akismet library for SSL support.
 
 Bugs:
 
